# codex-official-api-handoff

./: .gitignore  README.md  install.ps1  pyproject.toml  setup.py
src/codex_official_api_handoff/: backup.py  cli.py  config.py  handoff.py  pairs.py  paths.py  rollout.py  short_cli.py  sqlite_store.py
tests/: test_rollout.py  test_sync_logic.py
