[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-official-api-handoff"
version = "0.1.0"
description = "Safe handoff of Codex Desktop conversations between official OpenAI login and cc-switch/custom API mode."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "codex-official-api-handoff contributors" }
]
dependencies = []

[project.scripts]
codex-official-api-handoff = "codex_official_api_handoff.cli:main"
codex-handoff = "codex_official_api_handoff.short_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
